--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *todo.txt
 *.DS_Store
 *Useful commands.md
+Deploy to AWS instructions.md
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
